--- a/src/less/style.less
+++ b/src/less/style.less
@@ -19,7 +19,7 @@
 @import "@{bootstrap-less-directory}/dropdowns";
 @import "@{bootstrap-less-directory}/button-groups";
 @import "@{bootstrap-less-directory}/input-groups";
-//@import "@{bootstrap-less-directory}/navs";
+@import "@{bootstrap-less-directory}/navs";
 //@import "@{bootstrap-less-directory}/navbar";
 //@import "@{bootstrap-less-directory}/breadcrumbs";
 //@import "@{bootstrap-less-directory}/pagination";
