--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -12,3 +12,6 @@
 @brand-primary: @main-brand-color;
 
 @input-border-focus: @main-brand-color;
+
+@nav-link-hover-bg: @second-brand-color;
+@nav-pills-active-link-hover-bg: @third-brand-color;
