Display participant share in event result view

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -24,7 +24,7 @@
 //@import "@{bootstrap-less-directory}/breadcrumbs";
 //@import "@{bootstrap-less-directory}/pagination";
 //@import "@{bootstrap-less-directory}/pager";
-//@import "@{bootstrap-less-directory}/labels";
+@import "@{bootstrap-less-directory}/labels";
 //@import "@{bootstrap-less-directory}/badges";
 @import "@{bootstrap-less-directory}/jumbotron";
 //@import "@{bootstrap-less-directory}/thumbnails";
