--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -100,6 +100,11 @@
       background-color: white;
       border-radius: 3px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.15), 0 0 1px 1px rgba(0, 0, 0, 0.1);
+
+      .label {
+        font-size: 55%;
+        vertical-align: middle;
+      }
     }
 
     .table-responsive {
