Rename external link css class

--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -16,5 +16,5 @@ html
       .container
         hr
         p= t("app.global.footer.made_by")
-          |  <a href="https://twitter.com/YouKnowUU" title="#{twitter_account}" class="external")>@YouKnowUU</a>.
+          |  <a href="https://twitter.com/YouKnowUU" title="#{twitter_account}" class="external-link")>@YouKnowUU</a>.
     block js
