Load more button style

--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -35,6 +35,10 @@ a {
   line-height: 35px;
 }
 
+.btn-load-more {
+  .button-variant(@btn-load-more-color; @btn-load-more-bg; @btn-load-more-border);
+}
+
 .text-bold {
   font-weight: bold;
 }
