--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,15 +1,19 @@
 @icon-font-path: "/bower_components/bootstrap/fonts/";
 
-@main-brand-color: #FF895D;
-@second-brand-color: #D5EEFF;
-@third-brand-color: #78BBE6;
-@fourth-brand-color: #1B435D;
-@inverse-brand-color: #FFFFFF;
+@main-brand-color: #ff895d;
+@second-brand-color: #d5eeff;
+@third-brand-color: #78bbe6;
+@fourth-brand-color: #1b435d;
+@inverse-brand-color: #fff;
 
 @text-color: #555555;
-@border-color: #DDDDDD;
+@border-color: #ddd;
 
 @brand-primary: @main-brand-color;
+
+@btn-load-more-bg: @third-brand-color;
+@btn-load-more-color: #fff;
+@btn-load-more-border: darken(@btn-load-more-bg, 5%);
 
 @input-border-focus: @main-brand-color;
 
