--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -55,17 +55,18 @@
     }
 
     &-heading {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      margin-bottom: 15px;
-      font-size: 1.2em;
-      font-weight: 400;
+      padding: 10px 15px;
       text-align: center;
+      border-bottom: 1px solid transparent;
     }
 
     &-body, &-footer {
-      padding-left: 15px;
       padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    &-body {
+      padding-top: 15px;
     }
 
     &-body textarea {
