Confirmation modal before deleting an expense

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -38,7 +38,7 @@
 @import "@{bootstrap-less-directory}/close";
 @import "@{bootstrap-less-directory}/modals";
 //@import "@{bootstrap-less-directory}/tooltip";
-@import "@{bootstrap-less-directory}/popovers";
+//@import "@{bootstrap-less-directory}/popovers";
 //@import "@{bootstrap-less-directory}/carousel";
 @import "@{bootstrap-less-directory}/utilities";
 @import "@{bootstrap-less-directory}/responsive-utilities";
@@ -60,3 +60,4 @@
 @import "includes/main";
 @import "includes/angular-strap";
 @import "includes/element";
+@import "includes/modal";
