Use angular-ui-notification

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -58,7 +58,7 @@
 @import "includes/variables";
 @import "includes/angular";
 @import "includes/main";
-@import "includes/angular-strap";
+@import "includes/notification";
 @import "includes/element";
 @import "includes/modal";
 @import "includes/loading-spinner";
