--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -2,12 +2,12 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(name="description", content="#{description}")
-    meta(name="author", content="Vincent Tertre")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="description" content="#{description}")
+    meta(name="author" content="Vincent Tertre")
     title #{title}
     link(href="//fonts.googleapis.com/css?family=PT+Sans:400,700")
-    link(href=revision("/genere/css/style.css"), rel="stylesheet", type="text/css")
+    link(href=revision("/genere/css/style.css") rel="stylesheet" type="text/css")
 
   body(ng-app="app")
     header
