--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends include/layout
 block content
   .content
-    div(ui-view="" autoscroll="")
+    div(ui-view="" autoscroll="" ng-strict-di="")
 
 block js
   script(src="/i18next/i18next.js")
