--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -1,7 +1,7 @@
 body {
   font-family: 'PT Sans', Helvetica, serif;
   color: @text-color;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   margin: 0;
 }
 
@@ -37,6 +37,10 @@ a {
 
 .btn-load-more {
   .button-variant(@btn-load-more-color; @btn-load-more-bg; @btn-load-more-border);
+}
+
+.btn-options {
+  .button-variant(@btn-options-color; @btn-options-bg; @btn-options-border);
 }
 
 .text-bold {
