--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -1,6 +1,15 @@
 .expenses-list-panel(ng-controller="ExpensesListController as listModel")
   .panel.panel-primary(ng-cloak="" ng-repeat="expense in listModel.expenses | orderBy:$index:true")
     .panel-heading
+      .floating-options.dropdown
+        button#expenseMenu.btn.btn-options.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="true")
+          span.glyphicon.glyphicon-option-vertical(aria-hidden="true")
+        ul.dropdown-menu.dropdown-menu-right(aria-labelledby="expenseMenu")
+          li
+            a(href="javascript:void(0)" ng-click="listModel.deleteExpense(model.event.id, expense)")
+              span.glyphicon.glyphicon-trash(aria-hidden="true")
+              |  #{t("app.event.delete")}
       h4
         span.text-bold {{::expense.amount | currency:'€':2}}
         | &nbsp;- {{::expense.label}}
@@ -9,16 +18,6 @@
         span.text-bold {{::expense.purchaserName}}
       p #{t("app.event.shared_between")}&nbsp;
         span.text-bold(debts-inline-data="::expense.participantsNames")
-      .dropdown
-        button#expenseMenu.btn.btn-xs.btn-default.dropdown-toggle(type="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="true")
-          span.glyphicon.glyphicon-cog
-          |  #{t("app.event.actions")} <span class="caret"></span>
-        ul.dropdown-menu(aria-labelledby="expenseMenu")
-          li
-            a(href="javascript:void(0)" ng-click="listModel.deleteExpense(model.event.id, expense)")
-              span.glyphicon.glyphicon-trash(aria-hidden="true")
-              |  #{t("app.event.delete")}
     .panel-footer(ng-if="::expense.description") {{::expense.description}}
   loading-spinner(ng-show="listModel.loading")
   .row.text-center(ng-show="!listModel.loading")
