--- a/views/templates/event/details.jade
+++ b/views/templates/event/details.jade
@@ -1,6 +1,6 @@
 .expense-board
   .row
-    .col-md-4.col-md-offset-1.col-sm-6.col-xs-12(role="complementary")
+    .col-md-5.col-sm-6.col-xs-12(role="complementary")
       include includes/expense_creation_panel
-    .col-md-6.col-sm-6.col-xs-12(role="main")
+    .middle-panel.col-md-7.col-sm-6.col-xs-12(role="main")
       include includes/expenses_list_panel
