--- a/views/templates/event/result.jade
+++ b/views/templates/event/result.jade
@@ -1,27 +1,32 @@
 - var shareLabel = t("app.debts.share")
 
 .result-board
-  loading-spinner(ng-show="model.loading")
-  .row.participant-result(ng-repeat="participantResults in model.result")
-    .result-box.col-lg-8.col-lg-offset-2.col-xs-12
-      .col-lg-6.col-sm-6.col-xs-12
-        h2 {{::participantResults.participantName}}&nbsp;
-          span.label.label-primary
-            | {{::participantResults.participantShare, plural, =1 {1 #{shareLabel}} other {# #{shareLabel}s}}}
-        p= t("app.debts.total_spent")
-          span.text-bold  {{::participantResults.totalSpent | currency:'€':2}}</span>
-      .col-lg-6.col-sm-6.col-xs-12
-        .table-responsive
-          table.table
-            thead
-              tr
-                th= t("app.debts.creditor")
-                th= t("app.debts.debt")
-            tbody
-              tr(ng-repeat="debt in ::participantResults.debtsDetail" debts-visual-indicator="")
-                th(scope="row") {{::debt.creditorName}}
-                td {{::debt.mitigatedAmount | currency:'€':2}}
-            tfoot
-              tr
-                th(scope="row")= t("app.debts.total")
-                td.text-bold {{::participantResults.totalDebt | currency:'€':2}}
+  .row(ng-show="model.loading")
+    .col-md-10.col-md-offset-2.col-xs-12
+      loading-spinner
+  .row
+    .col-md-10.col-md-offset-2.col-xs-12
+      .participant-result(ng-repeat="participantResults in model.result")
+        .result-box
+          .row
+            .col-md-6.col-sm-6.col-xs-12
+              h2 {{::participantResults.participantName}}&nbsp;
+                span.label.label-primary
+                  | {{::participantResults.participantShare, plural, =1 {1 #{shareLabel}} other {# #{shareLabel}s}}}
+              p= t("app.debts.total_spent")
+                span.text-bold  {{::participantResults.totalSpent | currency:'€':2}}</span>
+            .col-md-6.col-sm-6.col-xs-12
+              .table-responsive
+                table.table
+                  thead
+                    tr
+                      th= t("app.debts.creditor")
+                      th= t("app.debts.debt")
+                  tbody
+                    tr(ng-repeat="debt in ::participantResults.debtsDetail" debts-visual-indicator="")
+                      th(scope="row") {{::debt.creditorName}}
+                      td {{::debt.mitigatedAmount | currency:'€':2}}
+                  tfoot
+                    tr
+                      th(scope="row")= t("app.debts.total")
+                      td.text-bold {{::participantResults.totalDebt | currency:'€':2}}
