Filter results by name

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -116,6 +116,12 @@
     margin-top: 15px;
   }
 
+  .filters {
+    @media (min-width: @screen-sm-min) {
+      margin-bottom: 15px;
+    }
+  }
+
   .participant-result {
     &:not(:first-child) {
       margin-top: 30px;
