--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -49,31 +49,8 @@
     margin-top: 15px;
   }
 
-  .expense-creation-panel {
-    background-color: @panel-bg;
-    border: 1px solid @main-brand-color;
-    border-radius: 4px;
-
-    @media (max-width: @screen-xs-max) {
-      margin-bottom: 30px;
-    }
-
-    &-heading {
-      padding: 10px 15px;
-      text-align: center;
-      border-bottom: 1px solid transparent;
-    }
-
-    &-body, &-footer {
-      padding-right: 15px;
-      padding-left: 15px;
-    }
-
-    &-body {
-      padding-top: 15px;
-    }
-
-    &-body textarea {
+  .debts-panel-body {
+    textarea {
       resize: vertical;
     }
   }
