--- a/src/less/style.less
+++ b/src/less/style.less
@@ -31,7 +31,7 @@
 @import "@{bootstrap-less-directory}/alerts";
 //@import "@{bootstrap-less-directory}/progress-bars";
 //@import "@{bootstrap-less-directory}/media";
-//@import "@{bootstrap-less-directory}/list-group";
+@import "@{bootstrap-less-directory}/list-group";
 @import "@{bootstrap-less-directory}/panels";
 //@import "@{bootstrap-less-directory}/responsive-embed";
 //@import "@{bootstrap-less-directory}/wells";
