--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -63,6 +63,17 @@ a {
     border-bottom: 1px solid transparent;
   }
 
+  &-heading-sm {
+    padding: 5px 15px;
+    border-bottom: 1px solid transparent;
+
+    h4 {
+      margin-top: 5px;
+      margin-bottom: 5px;
+      font-size: 14px;
+    }
+  }
+
   &-body, &-footer {
     padding-right: 15px;
     padding-left: 15px;
