Improve form placeholders and error states

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -57,6 +57,7 @@
 
 @import "includes/variables";
 @import "includes/angular";
+@import "includes/ng-strap";
 @import "includes/main";
 @import "includes/notification";
 @import "includes/element";
