--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -15,24 +15,24 @@ main
           .row
             .col-sm-10.col-sm-offset-1.col-xs-12
               .form-group(element-validation="eventForm.eventName")
-                label(for="inputEventName") * #{t("app.home.event_form.event_name")}
+                label.control-label(for="inputEventName") * #{t("app.home.event_form.event_name")}
                 input#inputEventName.form-control.input-lg(type="text" ng-model="model.event.name" name="eventName"
-                    placeholder=t("app.home.event_form.event_name_ph") required="")
+                    placeholder="e.g. #{t('app.home.event_form.event_name_ph')}" required="")
           .row(ng-cloak="" ng-repeat="participant in model.event.participants")
             hr.visible-xs-block(ng-if="!$first")
             .col-sm-4.col-sm-offset-1.col-xs-12
               .form-group(element-validation="eventForm.participant{{$index}}Name")
-                label(for="inputParticipantName" ng-if="$first") * #{t("app.home.event_form.participant_name")}
+                label.control-label(for="inputParticipantName" ng-if="$first") * #{t("app.home.event_form.participant_name")}
                 input#inputParticipantName.form-control.input-lg(type="text" ng-model="participant.name"
-                    name="participant{{$index}}Name" placeholder="Kim" required="")
+                    name="participant{{$index}}Name" placeholder="e.g. Kim" required="")
             .col-sm-4.col-xs-12
               .form-group
                 label(for="inputParticipantEmail" ng-if="$first")= t("app.home.event_form.participant_email")
                 input#inputParticipantEmail.form-control.input-lg(type="email" ng-model="participant.email"
-                    placeholder="kim@email.com")
+                    placeholder="e.g. kim@email.com")
             .col-sm-2.col-xs-9
               .form-group(element-validation="eventForm.participant{{$index}}Share")
-                label(for="inputParticipantShare" ng-if="$first") * #{t("app.home.event_form.participant_share")}
+                label.control-label(for="inputParticipantShare" ng-if="$first") * #{t("app.home.event_form.participant_share")}
                 input#inputParticipantShare.form-control.input-lg(type="number" ng-model="participant.share"
                     name="participant{{$index}}Share" required="" min="1")
             .col-md-1.col-sm-1.col-xs-3(ng-if="!$first")
