--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -15,10 +15,10 @@
         | &nbsp;- {{::expense.label}}
     .panel-body
       p #{t("app.event.purchased_by")}&nbsp;
-        span.text-bold {{::expense.purchaserName}}
+        span.text-bold(ng-bind="::expense.purchaserName")
       p #{t("app.event.shared_between")}&nbsp;
         span.text-bold(debts-inline-data="::expense.participantsNames")
-    .panel-footer(ng-if="::expense.description") {{::expense.description}}
+    .panel-footer(ng-if="::expense.description" ng-bind="::expense.description")
   loading-spinner(ng-show="listModel.loading")
   .row.text-center(ng-show="!listModel.loading")
     button.btn.btn-load-more(ng-click="listModel.loadMore()" ng-disabled="listModel.allLoaded")
