--- a/views/templates/event/result.jade
+++ b/views/templates/event/result.jade
@@ -20,7 +20,7 @@
                     | {{::participantResult.participantShare, plural, =1 {1 #{shareLabel}} other {# #{shareLabel}s}}}
                 p= t("app.debts.total_spent")
                   | &nbsp;
-                  span.text-bold(ng-bind="::participantResult.totalSpent | currency:'€':2")
+                  span.text-bold(ng-bind="::participantResult.totalSpent | currency")
               .col-md-6.col-sm-6.col-xs-12
                 .table-responsive
                   table.table
@@ -31,8 +31,8 @@
                     tbody
                       tr(ng-repeat="debt in ::participantResult.debtsDetail" debts-visual-indicator="")
                         th(scope="row" ng-bind="::debt.creditorName")
-                        td(ng-bind="::debt.mitigatedAmount | currency:'€':2")
+                        td(ng-bind="::debt.mitigatedAmount | currency")
                     tfoot
                       tr
                         th(scope="row")= t("app.debts.total")
-                        td.text-bold(ng-bind="::participantResult.totalDebt | currency:'€':2")
+                        td.text-bold(ng-bind="::participantResult.totalDebt | currency")
